--- a/web-desktop/index.html
+++ b/web-desktop/index.html
@@ -22,9 +22,9 @@
   <body>
     <h1 class="header">linkBoll</h1>
 
-    <div id="GameDiv" style="width: 1280px; height: 960px;">
+    <div id="GameDiv" style="width: 960px; height: 420px;">
       <div id="Cocos3dGameContainer">
-        <canvas id="GameCanvas" width="1280" height="960"></canvas>
+        <canvas id="GameCanvas" width="960" height="420"></canvas>
       </div>
     </div>
     <p class="footer">
@@ -40,7 +40,7 @@
 <script src="src/import-map.890c1.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.fc096.js').catch(function(err) { console.error(err); })
+    System.import('./index.eb4ed.js').catch(function(err) { console.error(err); })
 </script>
   </body>
 </html>
