--- a/web-desktop/index.html
+++ b/web-desktop/index.html
@@ -16,31 +16,31 @@
     <meta name="force-rendering" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="style.6990a.css"/>
     <link rel="icon" href="favicon.ico"/>
   </head>
   <body>
     <h1 class="header">linkBoll</h1>
 
-    <div id="GameDiv" style="width: 1280px; height: 960px;">
+    <div id="GameDiv" style="width: 440px; height: 420px;">
       <div id="Cocos3dGameContainer">
-        <canvas id="GameCanvas" width="1280" height="960"></canvas>
+        <canvas id="GameCanvas" width="440" height="420"></canvas>
       </div>
     </div>
     <p class="footer">
       Created with <a href="https://www.cocos.com/products" title="Cocos Creator">Cocos Creator</a>
     </p>
     <!-- Polyfills bundle. -->
-<script src="src/polyfills.bundle.js" charset="utf-8"> </script>
+<script src="src/polyfills.bundle.5adbf.js" charset="utf-8"> </script>
 
 <!-- SystemJS support. -->
-<script src="src/system.bundle.js" charset="utf-8"> </script>
+<script src="src/system.bundle.6de80.js" charset="utf-8"> </script>
 
 <!-- Import map -->
-<script src="src/import-map.json" type="systemjs-importmap" charset="utf-8"> </script>
+<script src="src/import-map.890c1.json" type="systemjs-importmap" charset="utf-8"> </script>
 
 <script>
-    System.import('./index.js').catch(function(err) { console.error(err); })
+    System.import('./index.eb4ed.js').catch(function(err) { console.error(err); })
 </script>
   </body>
 </html>
